--- a/www/css/style.css
+++ b/www/css/style.css
@@ -71,10 +71,16 @@ hr.list:after {
   font-size: 14px;
 }
 .processbar{
-	background-color:#3aa7dd;
+	background-color:#7aa8ea;
 	height:100%;
+  border-radius: 3px
 }
-
+.processbar-back{
+  margin-left:2px;margin-top:10px;border-radius: 3px;height:10px;background-color:#E6E6E6; border:0px;width:100%
+}
+.planbox{
+  border-radius: 5px;padding:0 2px 0 0;text-align:center;width:110px;height:20px;background-color:#e66767
+}
 .markDisplay1
 {
   display:block;
