日程选择日期bug 新增患者 回到最后一步主页 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -18,6 +18,13 @@
 	        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="CreatePlan()" ng-if="create.AddFlag" >
 	        	<span style="font-size:15px;color:blue;font-weight:bold">添加计划</span>
 	        </button>
-        </div>   	
+        </div>
+
+
+        
+        <div class = 'padding'>
+
+	<button ng-click="backtomain()"class="button button-block button-positive">完成</button>
+        </div>   	   	
     </ion-content>	
 </ionic view>
