--- a/www/partials/appointment/confirmappointment.html
+++ b/www/partials/appointment/confirmappointment.html
@@ -35,7 +35,7 @@
 			</div>
 			<label class="item item-input">
 				预约时间:
-				<input type="text" id="txt1" ng-model="healthcoach.Time"  disabled="disabled" ng-click="openModal()">
+				<input type="text" ng-model="healthcoach.Time" ng-click="openModal()">
 			</label>
 			
 			<label class="item item-input">
