样式修改，bug修改
Signed-off-by: hsnowman <824235172@qq.com>

--- a/www/partials/addpatient/clinicinfo.html
+++ b/www/partials/addpatient/clinicinfo.html
@@ -5,7 +5,7 @@
 <!-- </ion-nav-bar> -->
 <div class="bar-shadow"></div>
 <ion-content class="content-item-list">
-	<div class="row">
+	<div class="row responsive-sm">
 		<div class="col-50">
 			<div class="item item-select" style="height:52px">
 				<select>
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 
-	<div class="row" style="padding-bottom:0">
+	<div class="row responsive-sm" style="padding-bottom:0">
 		<div class="col-75" style="padding-right:2%">
 			<ionic-datepicker input-obj="datepickerObject" >
 			<button class="button button-block button-stable" >起始日期{{tt}}</button>
