--- a/www/partials/managepatient/tablelist.html
+++ b/www/partials/managepatient/tablelist.html
@@ -31,8 +31,8 @@
    <a class="button"  href="#/Independent/risk" >风险评估</a>
  </div>
  <div style="padding:5px">
-<div class="row item-margin" style="border:#E3E3E3 1px solid;margin:0;background-color:#FFFFFF">
-  <div class="col-80">
+<div class="row item-margin responsive-sm" style="border:#E3E3E3 1px solid;margin:0;background-color:#FFFFFF">
+  <div class="col-80"> 
     <div  class="item-row">
       <div class="col-50 text-center">
         <ionic-datepicker input-obj="datepickerObject">
