--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -25,7 +25,7 @@
 
 	<div class="top-of-the-content">{{Name}}  {{gender}}  {{age}}</div>
 
-	<div class="row">
+	<div class="row responsive-sm">
 		<div class="col-50">
 			
 				<select style="width:100%;height:44.5px;background-color:#f4f4f4;border:0px">
@@ -47,7 +47,7 @@
 		</div>
 	</div>
 
-	<div class="row" style="padding-top:0;padding-bottom:0">
+	<div class="row responsive-sm" style="padding-top:0;padding-bottom:0">
 		<div class="col-75" style="padding-right:2%" >
 			<ionic-datepicker input-obj="datepickerObject" >
 			<button class="button button-block button-stable" >起始日期{{tt}}</button>
