日历页面相关样式修改 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -104,7 +104,7 @@
 <div class="padding" >
 
   <div class style ="height=100; width =100; display:block; text-align:center;">
-    <img ng-click="onClickCamera($event)" ng-src="{{imgURI}}" width = 200 height = 200 >
+    <img  ng-src="{{imgURI}}" width = 200 height = 200 >
   </div>
 </div>
 
