--- a/www/partials/individual/coach-schedule.html
+++ b/www/partials/individual/coach-schedule.html
@@ -21,7 +21,7 @@
 <ion-header-bar class="bar bar-positive">
   <button class="button button-icon icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
   <div class="h1 title">个人日程</div>
-  <!-- <button class="button button-icon icon ion-plus" ng-click="onClickTest()"></button> -->
+  <button class="button button-icon icon ion-android-refresh" ng-click="onClickRefresh()"></button>
 </ion-header-bar>
 
 <!-- <div class="bar bar-subheader 
