--- a/www/partials/login/changePassword.html
+++ b/www/partials/login/changePassword.html
@@ -1,5 +1,5 @@
       <ion-view title="修改密码">
-        <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+        <ion-nav-bar class="bar-positive nav-title-slide-ios7">
           <ion-nav-buttons side="left">
             <button class="button button-icon icon ion-arrow-left-a " ng-click="onClickBackward()"></button>
           </ion-nav-buttons>
