--- a/www/css/style.css
+++ b/www/css/style.css
@@ -37,6 +37,13 @@
   padding:0 !important;
 
 }*/
+
+
+.item-note-2 {
+  float: right;
+  color: #222;
+  font-size: 14px; }
+
 .item-row{
   display: -webkit-box;
   display: -webkit-flex;
