列表自适应改善

--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -42,50 +42,51 @@
     </div>
     <ion-list> 
       <div  collection-repeat="patient in patients |filter:byRange()|filter: query" collection-item-height="94px"  ng-click="PIDdetail(patient)" >
-      <ion-item class="item-avatar-left item-margin " style="height:88px">
+      <ion-item class="item-avatar-left2 item-margin " style="height:88px">
         <img ng-src="{{patient.photoAddress}}">
-        <div >
-        <div class="row" style=" padding-left:65px">
-          <!-- <div class="col-10 "><div class="row"><h2>类别</h2><br></div><div class="row"><h2>消息</h2></div></div>  -->
-          <!-- <div class="col-90"> -->
-            <!-- <div class="row"> -->
-              <div class="col-75">
-                <div class="row " style="padding-right:0">
-                  <div class="col-50"><h5><!--<i class="icon ion-chevron-right"></i>-->  {{patient.PatientName}}<span ng-if="patient.SMSCount" class="badge1">{{patient.SMSCount}}</span></h5></div>
-                  <div class="col-50"><h6 >{{patient.Age}}   {{patient.GenderText[0]}}</h6></div>
-                </div>
-                <div class="row">
-                  <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p></div>
-                </div> 
-              </div>
-              <div class="col-25">
-                <div class="item-row">
-                  <div class="col-40">
-                    <h style="font-size:0.9rem">依从率</h>
-                    <h5 style="font-size:1.68rem" ng-style="{'color':(patient.ComplianceRate>50?'#33cd5f':'#fb6a1b')}">{{patient.ComplianceRate}}%</h5>
-                  </div>
-                </div>
-              </div>  
+        <!-- <div > -->
+        <div class="row" style=" padding-left:65px;padding-bottom:0">
+          <div class="col-75">
+<!--             <div class="row " style="padding-right:0">
+              <div class="col-50"><h5>{{patient.PatientName}}<span ng-if="patient.SMSCount" class="badge1">{{patient.SMSCount}}</span></h5></div>
+              <div class="col-50"><h6 >{{patient.Age}}   {{patient.GenderText[0]}}</h6></div>
             </div>
             <div class="row">
-              <!-- <div class="col-25"> -->
-<!--               <p ng-if="(patient.Status-0)" style="margin:0 2px 0 5px;width:120px" ><i class="icon ion-arrow-graph-up-right"></i> 剩余{{patient.RemainingDays}}天</p>
-              <p ng-if="!(patient.Status-0)" style="margin:0 2px 0 5px;width:120px" ><i class="icon ion-arrow-graph-up-right"></i> 暂无计划</p> -->
-              <p  class="planbox" style="color:#FFF" ng-if="patient.Status*patient.TotalDays*(patient.EndDate < 88880101)"><span ng-if="patient.RemainingDays">剩余{{patient.RemainingDays}}天</span><span ng-if="patient.RemainingDays=='0'">即将完成</span></p>
-              <!-- <p ng-if="!(patient.Status-0)" style="margin:0 2px 0 65px;width:100%;font-style:italic" >暂无计划</p>               -->
+              <div class="col-100"><p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p></div>
+            </div>  -->
+            <!-- <div class="row " style="padding-right:0"> -->
+              <!-- <div class="col"> -->
+                <h5>{{patient.PatientName}}<span ng-if="patient.SMSCount" class="badge1">{{patient.SMSCount}}</span><span class="gender-and-age">{{patient.Age}} {{patient.GenderText[0]}}</span></h5>
               <!-- </div> -->
-              <div class="processbar-back" ng-style="{'display':(patient.Status=='0'|| patient.TotalDays=='0'?'none':'block')}" >
-              <div class="processbar" ng-style="{'width':patient.Process+'%'}" ></div>
-              </div>
-        
-            </div>
-       <!--      <div ng-if="(patient.Status-0)" class="row">
-              <p style="margin:0 2px 0 5px;width:100px" ><i class="icon ion-arrow-graph-up-right"></i> 暂无计划</p>
-            </div> -->            
+              <!-- <div class="col"> -->
+                <!-- <h6 >{{patient.Age}}   {{patient.GenderText[0]}}</h6> -->
+              <!-- </div> -->
+            <!-- </div> -->
+            <!-- <div class="row"> -->
+              <!-- <div class="col-100"> -->
+                <p><i class="icon ion-pie-graph"></i> {{patient.Module}}</p>
+              <!-- </div> -->
+            <!-- </div>  -->
           </div>
-          <!-- </div>   -->
-        <!-- </div>         -->
-        </ion-item>
+          <div class="col-25">
+            <!-- <div class="item-row"> -->
+              <!-- <div class="col-40"> -->
+                <p style="font-size:0.9rem">依从率</p>
+                <h5 style="font-size:1.68rem" ng-style="{'color':(patient.ComplianceRate>50?'#33cd5f':'#fb6a1b')}">{{patient.ComplianceRate}}%</h5>
+              <!-- </div> -->
+            <!-- </div> -->
+          </div>  
+        </div>
+        <div class="item-row">
+          <p  class="planbox" style="color:#FFF" ng-if="patient.Status*patient.TotalDays*(patient.EndDate < 88880101)"><span ng-if="patient.RemainingDays">剩余{{patient.RemainingDays}}天</span><span ng-if="patient.RemainingDays=='0'">即将完成</span></p>
+          <!-- <p ng-if="!(patient.Status-0)" style="margin:0 2px 0 65px;width:100%;font-style:italic" >暂无计划</p>               -->
+          <!-- </div> -->
+          <div class="processbar-back" ng-style="{'display':(patient.Status=='0'|| patient.TotalDays=='0'?'none':'block')}" >
+          <div class="processbar" ng-style="{'width':patient.Process+'%'}" ></div>
+          </div>        
+        </div>         
+        <!-- </div> -->
+      </ion-item>
       </div>
       
     </ion-list>
