20151203 LRZ风险评估样式修改 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/addpatient/riskdetail.html
+++ b/www/partials/addpatient/riskdetail.html
@@ -1,4 +1,4 @@
-<ion-view title="风险评估">
+<ion-view title="风险评估" >
 
 <ion-nav-bar class="bar-positive nav-title-slide-ios7"> 
     <ion-nav-back-button class="button-icon ion-arrow-left-c">
@@ -37,7 +37,7 @@
   <!-- </div> -->
 <!-- </div> -->
 
-<div class="card">
+<div class="card" ng-hide = "isHiding">
   <!-- <div class="item item-text-wrap"> -->
      <div id="riskchart" ></div> 
 <!--   </div> -->
