--- a/www/partials/managepatient/riskdetail.html
+++ b/www/partials/managepatient/riskdetail.html
@@ -37,7 +37,7 @@
   <!-- </div> -->
 <!-- </div> -->
 
-<div class="card">
+<div class="card" ng-hide = "isHiding">
   <!-- <div class="item item-text-wrap"> -->
      <div id="riskchart" ></div> 
 <!--   </div> -->
