--- a/www/partials/managepatient/plan/create.html
+++ b/www/partials/managepatient/plan/create.html
@@ -10,12 +10,15 @@
 	<ion-content has-bouncing="false">
 		<div class="top-of-the-content">{{Name}}  {{gender}}  {{age}}</div>	
 		<div class="list">
-			<a class="item" href="#/manage/taskList" ng-repeat = "item in create.PlanList" ng-click="SavePlanNo(item.PlanNo)">        
-			{{item.PlanName}}{{item.StartDate}}{{item.EndDate}}
-	        </a>
+			<div class="item" ng-repeat = "item in create.PlanList" style="background-color:#FBFCFF;color:{{item.Status}}">
+				<a class="item item-icon-right" href="#/manage/taskList" ng-click="SavePlanNo(item.PlanNo)">    
+					{{item.PlanName}}{{item.StartDate}}{{item.EndDate}} 
+					<i class="icon ion-chevron-right"></i>
+		        </a> 
+	        </div>          	                          
     	</div>
     	<div style="text-align:center;padding:20px;">
-	        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="CreatePlan()" ng-if="create.AddFlag" >
+	        <button class="button button-outline button-positive" style="width:100px;height:30px;" ng-click="CreatePlan()" ng-if="create.AddFlag" >
 	        	<span style="font-size:15px;color:blue;font-weight:bold">添加计划</span>
 	        </button>
         </div>     	
