--- a/www/partials/addpatient/plan/create.html
+++ b/www/partials/addpatient/plan/create.html
@@ -10,12 +10,16 @@
 	<div class="bar-shadow"></div>
 	<ion-content>
 		<div class="list">
-			<a class="item" href="#/addpatient/taskList" ng-repeat = "item in create.PlanList" ng-click="SavePlanNo(item.PlanNo)">      {{item.PlanName}}{{item.StartDate}}{{item.EndDate}}
-	        </a>
+			<div class="item" ng-repeat = "item in create.PlanList" style="background-color:#FBFCFF;color:{{item.Status}}">
+				<a class="item item-icon-right" href="#/manage/taskList" ng-click="SavePlanNo(item.PlanNo)">    
+					{{item.PlanName}}{{item.StartDate}}{{item.EndDate}} 
+					<i class="icon ion-chevron-right"></i>
+		        </a> 
+	        </div>   
     	</div>
 
     	<div style="text-align:center;padding:20px;">
-	        <button class="button button-outline button-positive" style="width:60px;height:30px;" ng-click="CreatePlan()" ng-if="create.AddFlag" >
+	        <button class="button button-outline button-positive" style="width:100px;height:30px;" ng-click="CreatePlan()" ng-if="create.AddFlag" >
 	        	<span style="font-size:15px;color:blue;font-weight:bold">添加计划</span>
 	        </button>
         </div>
