--- a/www/partials/appointment/confirmappointment.html
+++ b/www/partials/appointment/confirmappointment.html
@@ -35,7 +35,8 @@
 			</div>
 			<label class="item item-input">
 				预约时间:
-				<input type="text" ng-model="healthcoach.Time" ng-click="openModal()">
+				<!-- <input type="text" ng-model="healthcoach.Time" ng-click="openModal()"> -->
+				<button class="button button-block button-clear" ng-click="openModal()">{{healthcoach.Time}}</button>
 			</label>
 			
 			<label class="item item-input">
@@ -63,14 +64,18 @@
 
 
 
-  <label class="item item-input item-select">
-    <div class="input-label">
-      选择日期（未来30天）
-    </div>
-    <select ng-model = "data.selectedDate">
-      <option ng-repeat =  "item in datesOptions" >{{item.toLocaleDateString()}}</option>
-    </select>
-  </label>
+  <ionic-datepicker input-obj="datepickerObject">
+   <label class="item">
+    <span>
+      选择新的时间(仅限未来30天)
+    </span>
+        <span class="item-note">
+          {{data.selectedDate}}
+        </span>
+     
+  </label>       
+        
+   </ionic-datepicker>
   <label class="item item-input item-select">
     <div class="input-label">
       选择时间
