改正列表中的一个时间显示

--- a/www/partials/individual/coach-patients.html
+++ b/www/partials/individual/coach-patients.html
@@ -15,8 +15,8 @@
       <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()"></button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-      <!-- <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a> -->
-      <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a>
+      <a class="button button-icon icon ion-android-more-vertical" ng-click="popover.show($event)"></a>
+      <!-- <a class="button button-icon icon ion-android-more-vertical" ng-click="openpopover($event)"></a> -->
     </ion-nav-buttons>
 <!--     <ion-nav-buttons side="right">
       <button class="button button-icon icon ion-search " ng-click="openSearch()"></button>
