--- a/www/partials/individual/coach-schedule-detail.html
+++ b/www/partials/individual/coach-schedule-detail.html
@@ -51,9 +51,14 @@
     </div>
     <div class="padding">
     
-      <span class="button button-block button-positive icon-left ion-wrench" ng-click = "onClickChangeApp()">修改时间</span>
+      <span class="button button-block button-stable icon-left ion-wrench" ng-click = "onClickChangeApp()">修改时间</span>
 
       <span class="button button-block button-assertive icon-left ion-trash-a" ng-click = "onClickCancelApp()">取消预约</span>
+
+      <span class="button button-block button-positive icon-left ion-checkmark-round" ng-click = "onClickFinishApp()">
+        完成任务</span>
+
+      
     </div>
 </ion-content>
 
