--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -155,7 +155,9 @@ Dept
           <option>正高</option>
           <option>副高</option>
         </select>
-      </label>                              
+      </label>     
+
+       <div class="item item-divider">个人简介</div>                         
 <!--  <a href="#" class="item item-icon-left item-icon-right"  ng-click ="onClickEditUnitName()">
         <i class="icon ion-calendar"></i>
          {{userInfo.DtInfo.unitname}}
