--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -4,6 +4,7 @@
     <button class="button button-icon icon ion-qr-scanner " ng-click="QRscan()"></button>
     <div class="h1 title">主页</div>
     <button class="button button-icon icon ion-plus-round" ng-click="addpatient()"></button>
+    <a class="button button-icon icon ion-chatbubble-working" href="#/messages"></a>
   </ion-header-bar>
 <!-- 
   <ion-nav-bar class="bar-positive nav-title-slide-ios7">
