20151223 加上了个人简介的修改功能 界面展示加上了活跃度和管理病人数量 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -4,6 +4,9 @@
     <div class="h1 title">个人信息</div>
 
         <button class="button button-icon icon ion-checkmark-round" ng-click="onClickSave()"></button>
+
+<!--           <button class="button button-icon icon ion-person" ng-click="test()"></button> -->
+
   </ion-header-bar>
 
 <!--   <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
@@ -157,7 +160,16 @@ Dept
         </select>
       </label>     
 
-       <div class="item item-divider">个人简介</div>                         
+      <div class="item item-divider">个人简介</div> 
+          <label class="item item-input">
+            <textarea placeholder="个人简介" ng-model = "HealthCoachInfo.Description">
+                       
+            </textarea>
+
+            <!-- <input type="text" placeholder="个人简介"> -->
+          </label>    
+
+          <!-- {{HealthCoachInfo.Description}}                -->
 <!--  <a href="#" class="item item-icon-left item-icon-right"  ng-click ="onClickEditUnitName()">
         <i class="icon ion-calendar"></i>
          {{userInfo.DtInfo.unitname}}
