--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -58,8 +58,9 @@
           <p> <i class="icon ion-ios-pulse-strong positive"></i>  负责模块：{{HealthCoachInfo.module}}</p>
           <p> <i class="icon ion-thumbsup positive"></i>  总体评分：{{HealthCoachInfo.generalscore}}</p>
           <p> <i class="icon ion-thumbsup positive"></i>  整体评价：{{HealthCoachInfo.generalComment}}</p>
-          <!-- <p>活跃度：{{HealthCoachInfo.activityDegree}}</p> -->
-          <p> <i class="icon ion-android-happy positive"></i>{{HealthCoachInfo.Description}}</p>
+          <p><i class="icon ion-android-sunny positive"></i>活跃度：{{HealthCoachInfo.activityDegree}}</p>
+          <p><i class="icon ion-android-favorite positive"></i>管理病人数量： {{HealthCoachInfo.patientNum}}</p>
+          <p><i class="icon ion-android-happy positive"></i>{{HealthCoachInfo.Description}}</p>
        <!--  </div> -->
          
           <a class="item item-icon-left item-icon-right positive" href="#/commentList">
