--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -98,6 +98,17 @@
       </select>
 
     </label>
+
+
+
+      <div class="item item-divider">个人简介</div> 
+          <label class="item item-input">
+            <textarea placeholder="个人简介" ng-model = "HealthCoachInfo.Description">
+                       
+            </textarea>
+
+            <!-- <input type="text" placeholder="个人简介"> -->
+          </label>    
 </ion-list>
 
 <!-- <div class="item item-avatar"> -->
