界面展示增加了 病人数量  Data.Dict添加若干GET方法 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -59,7 +59,7 @@
           <p> <i class="icon ion-thumbsup positive"></i>  总体评分：{{HealthCoachInfo.generalscore}}</p>
           <p> <i class="icon ion-thumbsup positive"></i>  整体评价：{{HealthCoachInfo.generalComment}}</p>
           <p><i class="icon ion-android-sunny positive"></i>活跃度：{{HealthCoachInfo.activityDegree}}</p>
-          <p><i class="icon ion-android-favorite positive"></i>管理病人数量： {{HealthCoachInfo.patientNum}}</p>
+          <p><i class="icon ion-android-favorite positive"></i>管理病人数量： {{HealthCoachInfo.PatientNum}}</p>
           <p><i class="icon ion-android-happy positive"></i>{{HealthCoachInfo.Description}}</p>
        <!--  </div> -->
          
